apps/samples/juice-shop/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-juice-shop
  namespace: ${NAMESPACE}
  labels:
    app.kubernetes.io/name: sample-juice-shop
    app.kubernetes.io/part-of: fortifylab-samples
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sample-juice-shop
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sample-juice-shop
        app.kubernetes.io/part-of: fortifylab-samples
    spec:
      containers:
      - name: juice-shop
        image: ${FORTIFY_SAMPLE_JUICE_SHOP_IMAGE}
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: sample-juice-shop
  namespace: ${NAMESPACE}
  labels:
    app.kubernetes.io/name: sample-juice-shop
    app.kubernetes.io/part-of: fortifylab-samples
spec:
  selector:
    app.kubernetes.io/name: sample-juice-shop
  ports:
  - name: http
    port: 80
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-juice-shop
  namespace: ${NAMESPACE}
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: public
  tls:
  - hosts:
    - ${JUICE_SHOP}
    secretName: tls
  rules:
  - host: ${JUICE_SHOP}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sample-juice-shop
            port:
              number: 80
